cluster/manifests/hippocampus-dev-slack-oauth-bridge/overlays/dev/oauth-bridge/peer_authentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: oauth-bridge
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: oauth-bridge
  mtls:
    mode: STRICT
