cluster/manifests/hippocampus-dev-slack-oauth-bridge/overlays/dev/oauth-bridge/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: oauth-bridge
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - hippocampus-dev-slack-oauth-bridge.minikube.127.0.0.1.nip.io
        - hippocampus-dev-slack-oauth-bridge.kaidotio.dev
        - hippocampus-dev-slack-oauth-bridge-public.kaidotio.dev
      port:
        number: 80
        name: http
        protocol: HTTP
