cluster/manifests/hippocampus-dev-slack-oauth-bridge/overlays/dev/oauth-bridge/service_entry.yaml
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: slack.com
spec:
  exportTo:
    - .
  hosts:
    - slack.com
  location: MESH_EXTERNAL
  ports:
    - name: https
      number: 443
      protocol: HTTPS
  resolution: DNS
