cluster/manifests/hippocampus-dev-slack-oauth-bridge/overlays/dev/oauth-bridge/virtual_service.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: oauth-bridge
spec:
  gateways:
    - hippocampus-dev-slack-oauth-bridge
  hosts:
    - hippocampus-dev-slack-oauth-bridge.minikube.127.0.0.1.nip.io
    - hippocampus-dev-slack-oauth-bridge.kaidotio.dev
    - hippocampus-dev-slack-oauth-bridge-public.kaidotio.dev
  http:
    - route:
        - destination:
            host: hippocampus-dev-slack-oauth-bridge
            port:
              number: 8080
      retries:
        attempts: 3
        retryOn: gateway-error,retriable-4xx,connect-failure,refused-stream,unavailable,cancelled,retriable-status-codes
